--- a/talk/package.json
+++ b/talk/package.json
@@ -18,8 +18,9 @@
     "normalize.css": "7.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "spectacle": "^5.1.0",
-    "spectacle-renderer": "^0.0.3"
+    "spectacle": "^5.2.0",
+    "spectacle-renderer": "^0.0.3",
+    "react-emotion": "latest"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
