task(indentation): use 2 spaces everywhere

--- a/kt-react/public/manifest.json
+++ b/kt-react/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React Kotlin App",
-  "name": "Create React Kotlin App Sample",
+  "short_name": "MdK React Kotlin",
+  "name": "MdK React Kotlin 2018 by Xebia",
   "icons": [
     {
       "src": "favicon.ico",
