--- a/kt-react/package.json
+++ b/kt-react/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.1.2",
     "axios": "^0.18.0",
     "kotlinx-coroutines-core": "^0.30.0",
     "react": "^16.5.2",
