--- a/kt-react/package.json
+++ b/kt-react/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@jetbrains/kotlin-css": "^1.0.0-pre.54",
+    "@jetbrains/kotlin-css-js": "^1.0.0-pre.54",
+    "@jetbrains/kotlin-styled": "^1.0.0-pre.54",
     "@material-ui/core": "^3.1.2",
     "axios": "^0.18.0",
+    "inline-style-prefixer": "^5.0.1",
     "kotlinx-coroutines-core": "^0.30.0",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "styled-components": "^3.4.9"
   },
   "devDependencies": {
     "react-scripts-kotlin": "2.1.14"
