--- a/kt-api/functions/package.json
+++ b/kt-api/functions/package.json
@@ -6,14 +6,21 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "cli:event:create": "curl -X PUT https://us-central1-fir-mdk-20181005.cloudfunctions.net/v1/event -H 'Content-Type: application/x-www-form-urlencoded' -d 'label=xebicon' -d 'date=2018-11-19T23:00:00.000Z' -d 'image=https://xebicon.fr/wp-content/uploads/2018/06/logo-head.png'",
+    "cli:event:list": "curl https://us-central1-fir-mdk-20181005.cloudfunctions.net/v1/event --silent | jq",
+    "delete-invalid-line": "sed -i '/importsForInline/d' ./functions/index.js",
+    "set-project": "firebase use --add"
   },
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.5",
-    "kotlin": "^1.2.71",
-    "cors": "^2.8.4"
+    "kotlin": "^1.2.71"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "npm-check": "^5.9.0"
+  }
 }
