--- a/talk/.eslintrc
+++ b/talk/.eslintrc
@@ -8,14 +8,16 @@
   "no-magic-numbers": 0
   "react/prefer-es6-class": 0
   "react/no-multi-comp": 0
+  "quotes": ["warn", "single"]
+  "react/jsx-closing-bracket-location": 0]
 
 "env":
-  "browser": true,
+  "browser": true
   "node": true
 "globals":
-  "afterEach": true,
-  "describe": true,
-  "expect": true,
-  "it": true,
-  "jest": true,
+  "afterEach": true
+  "describe": true
+  "expect": true
+  "it": true
+  "jest": true
   "test": true
