--- a/kt-react/package.json
+++ b/kt-react/package.json
@@ -9,12 +9,13 @@
     "@material-ui/core": "^3.1.2",
     "axios": "^0.18.0",
     "inline-style-prefixer": "^5.0.1",
-    "kotlinx-coroutines-core": "^0.30.0",
+    "kotlinx-coroutines-core": "^0.30.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "styled-components": "^3.4.9"
   },
   "devDependencies": {
+    "firebase-tools": "^5.0.1",
     "react-scripts-kotlin": "2.1.14"
   },
   "scripts": {
